tests/src/frontend/syntax/invalid/const_pattern5.sk
class C(x: Int = 42)

const MyC: C = C();

fun shouldFail(x: Int): String {
  C(x) match {
  | MyC -> "Pass\n"
  | _ -> "Fail\n"
  }
}
